--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "",
-    "version": "",
-    "description": "",
+    "name": "TODO",
+    "version": "TODO",
+    "description": "TODO",
     "main": "./lib/index.js",
     "scripts": {
         "clean": "rimraf lib",
@@ -12,8 +12,9 @@
         "test:examples": "node examples/",
         "cover": "istanbul cover _mocha -- --require babel-core/register --require babel-polyfill --recursive",
         "lint": "eslint src test",
-        "build": "cross-env BABEL_ENV=production babel src --out-dir lib",
-        "prepublish": "npm run clean && npm run lint && npm run test && npm run build"
+        "build": "cross-env BABEL_ENV=production babel src --out-dir lib && npm run demo",
+        "prepublish": "npm run clean && npm run lint && npm run test && npm run build && npm run demo",
+        "demo": "webpack --mode production"
     },
     "files": [
         "lib",
@@ -29,7 +30,7 @@
         "node",
         "javascript"
     ],
-    "author": "",
+    "author": "TODO",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/pokkur/npm-module-boilerplate/issues"
@@ -51,6 +52,11 @@
         "eslint-plugin-react": "^7.4.0",
         "istanbul": "^1.0.0-alpha",
         "mocha": "^5.0.0",
-        "rimraf": "^2.6.2"
+        "rimraf": "^2.6.2",
+        "webpack-cli": "^3.1.0",
+        "webpack-dev-server": "^3.1.5"
+    },
+    "dependencies": {
+        "webpack": "^4.16.3"
     }
 }
