--- a/.eslintrc
+++ b/.eslintrc
@@ -2,11 +2,14 @@
     "parser": "babel-eslint",
     "extends": "airbnb",
     "env": {
+        "browser": true,
         "mocha": true
     },
     "rules": {
         "comma-dangle": ["error", "only-multiline"],
         "semi": [2, "never"],
-        "indent": ["error", 4, { "SwitchCase": 1 }]
+        "indent": ["error", 4, { "SwitchCase": 1 }],
+        "no-bitwise": ["error", { "allow": ["~"] }],
+        "no-unused-expressions": 0
     }
 }
