--- a/package.json
+++ b/package.json
@@ -2,19 +2,11 @@
     "name": "TODO",
     "version": "TODO",
     "description": "TODO",
-    "main": "./lib/index.js",
+    "module": "./lib/index.js",
+    "main": "./dist/defaultAwesomeFunction.min.js",
     "scripts": {
-        "clean": "rimraf lib",
-        "test": "npm run lint && npm run cover",
-        "test:prod": "cross-env BABEL_ENV=production npm run test",
-        "test:only": "mocha --require babel-core/register --require babel-polyfill --recursive",
-        "test:watch": "npm test -- --watch",
-        "test:examples": "node examples/",
-        "cover": "istanbul cover _mocha -- --require babel-core/register --require babel-polyfill --recursive",
-        "lint": "eslint src test",
-        "build": "cross-env BABEL_ENV=production babel src --out-dir lib && npm run demo",
-        "prepublish": "npm run clean && npm run lint && npm run test && npm run build && npm run demo",
-        "demo": "webpack --mode production"
+        "prepublish": "yarn build",
+        "build": "rollup -c rollup.config.js"
     },
     "files": [
         "lib",
@@ -37,26 +29,29 @@
     },
     "homepage": "https://github.com/pokkur/npm-module-boilerplate#readme",
     "devDependencies": {
-        "babel-cli": "^6.26.0",
+        "@babel/cli": "^7.0.0",
+        "@babel/core": "^7.0.0",
+        "@babel/plugin-external-helpers": "^7.0.0",
+        "@babel/plugin-transform-runtime": "^7.0.0",
+        "@babel/polyfill": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/runtime-corejs2": "^7.0.0",
         "babel-eslint": "^8.2.1",
-        "babel-plugin-add-module-exports": "^0.2.1",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-minify": "^0.3.0",
-        "chai": "^4.1.2",
+        "babel-preset-minify": "^0.5.0-alpha.e9f96ffe",
+        "core-js": "^2.5.7",
         "cross-env": "^5.1.3",
-        "eslint": "^4.16.0",
-        "eslint-config-airbnb": "^16.1.0",
+        "eslint": "^5.4.0",
+        "eslint-config-airbnb": "^17.1.0",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jsx-a11y": "^6.0.2",
-        "eslint-plugin-react": "^7.4.0",
+        "eslint-plugin-react": "^7.11.1",
         "istanbul": "^1.0.0-alpha",
         "mocha": "^5.0.0",
         "rimraf": "^2.6.2",
-        "webpack-cli": "^3.1.0",
-        "webpack-dev-server": "^3.1.5"
-    },
-    "dependencies": {
-        "webpack": "^4.16.3"
+        "rollup": "^0.65.0",
+        "rollup-plugin-babel": "^4.0.0-beta.8",
+        "rollup-plugin-commonjs": "^9.1.6",
+        "rollup-plugin-node-resolve": "^3.3.0",
+        "rollup-plugin-uglify": "^4.0.0"
     }
 }
